Добавлена обработка ошибок

--- a/#19 AnimeBook/Supporting Files/Base.lproj/Localizable.strings
+++ b/#19 AnimeBook/Supporting Files/Base.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 "Please check your internet connection and try again" = "Please check your internet connection and try again";
 "Send information to support. We will deal with this problem in the near future" = "Send information to support. We will deal with this problem in the near future";
 "Unfortunately, it was not possible to localize (translate) the data" = "Unfortunately, it was not possible to localize (translate) the data";
+"Try again" = "Try again";
