--- a/#19 AnimeBook/Supporting Files/ru.lproj/Localizable.strings
+++ b/#19 AnimeBook/Supporting Files/ru.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 "Please check your internet connection and try again" = "Пожалуйста проверьте ваше интернет соединение и попробуйте снова";
 "Send information to support. We will deal with this problem in the near future" = "Направьте информацию в службу поддержки. В ближайшее время мы разберемся с данной проблемой";
 "Unfortunately, it was not possible to localize (translate) the data" = "К сожалению не удалось локализовать(перевести) данные";
+"Try again" = "Попробовать снова";
